--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <ul class="users">
+        
+    </ul>
     <div class="container">
         <div class="left">
             <form id="message_form">
